@@ -87,6 +87,14 @@
                   android:theme="@style/Theme.TalonLight.Popup">
         </activity>
 
+        <activity android:name=".ui.ComposeDMActivity"
+                  android:label="@string/compose_activity"
+                  android:configChanges="orientation|screenSize"
+                  android:windowSoftInputMode="adjustResize|stateAlwaysVisible"
+                  android:excludeFromRecents="true"
+                  android:theme="@style/Theme.TalonLight.Popup">
+        </activity>
+
         <activity android:name=".ui.TweetActivity"
                   android:label="@string/app_name"
                   android:configChanges="orientation|screenSize"
